2011-05-10  Kenichi Ishibashi  <bashi@chromium.org>

Reviewed by Tony Chang.

        REGRESSION(r85013): platform/chromium-linux/fast/text/international/complex-joining-using-gpos.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=60079

        Update the expected results.

        * platform/chromium-linux-x86_64/platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.png: Added.
        * platform/chromium-linux-x86_64/platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.txt:
        * platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.png:
        * platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.txt:
        * platform/chromium-linux/fast/text/international/complex-joining-using-gpos.html:
        * platform/chromium-linux/platform/chromium-linux/fast/text/international/complex-joining-using-gpos-expected.png: Removed.
        * platform/chromium/test_expectations.txt:
2011-05-10  Kenichi Ishibashi  <bashi@chromium.org>

        Reviewed by Tony Chang.

        REGRESSION(r85013): platform/chromium-linux/fast/text/international/complex-joining-using-gpos.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=60079

        Set resultingNumPoints = 0 so that harfbuzz uses the design coordinate
        value pair.

        * platform/graphics/chromium/HarfbuzzSkia.cpp:
        (WebCore::getOutlinePoint): Just return HB_Err_Ok with resultingNumPoints = 0.

Canonical link: https://commits.webkit.org/75833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86171 268f45cc-cd09-0410-ab3c-d52691b4dbfc